--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
-    "antd": "^3.19.2",
+    "antd": "^4.21.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "sass": "^1.22.1",
-    "sass-loader": "^7.1.0",
-    "styled-components": "^4.2.1"
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -30,6 +29,7 @@
     "babel-plugin-import": "^1.12.0",
     "css-loader": "2.1.1",
     "file-loader": "3.0.1",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "postcss-loader": "^3.0.0",
