--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,13 +23,6 @@
       "@/*": ["src/*"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "build",
-    "scripts",
-    "acceptance-tests",
-    "webpack",
-    "jest",
-    "src/setupTests.ts"
-  ]
+  "include": ["./src/", "./types/"],
+  "exclude": ["node_modules", "app"]
 }
