--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "style-loader": "0.23.1",
     "ts-loader": "^6.0.2",
     "typescript": "^3.5.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "1.1.2",
     "webpack": "4.33.0",
     "webpack-bundle-analyzer": "^4.5.0",
