--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "test": "jest"
   },
   "dependencies": {
     "antd": "^4.21.4",
@@ -33,6 +34,7 @@
     "file-loader": "3.0.1",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "3.2.0",
+    "jest": "^28.1.2",
     "less": "^4.1.3",
     "less-loader": "5.0.0",
     "mini-css-extract-plugin": "^0.7.0",
