--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
     "build": "NODE_ENV=production webpack",
-    "test": "jest"
+    "test": "jest --config ./jest.config.js"
   },
   "dependencies": {
     "antd": "^4.21.4",
@@ -27,20 +27,24 @@
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
-    "@types/styled-components": "^4.1.16",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.0",
     "css-loader": "2.1.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "file-loader": "3.0.1",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "3.2.0",
     "jest": "^28.1.2",
+    "jest-less-loader": "^0.1.2",
     "less": "^4.1.3",
     "less-loader": "5.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
     "style-loader": "0.23.1",
+    "ts-jest": "^28.0.5",
     "ts-loader": "^6.0.2",
     "typescript": "^3.5.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
