--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "html-webpack-plugin": "3.2.0",
     "jest": "^28.1.2",
     "jest-less-loader": "^0.1.2",
+    "jest-transform-stub": "^2.0.0",
+    "jsdom": "^20.0.0",
     "less": "^4.1.3",
     "less-loader": "5.0.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -46,7 +48,7 @@
     "style-loader": "0.23.1",
     "ts-jest": "^28.0.5",
     "ts-loader": "^6.0.2",
-    "typescript": "^3.5.1",
+    "typescript": "4.7.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "1.1.2",
     "webpack": "4.33.0",
