--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "build/dist",
+    "outDir": "app",
     "module": "esnext",
     "target": "es5",
     "experimentalDecorators": true,
@@ -21,7 +21,8 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "esModuleInterop": true
   },
   "include": ["./src/", "./types/"],
   "exclude": ["node_modules", "app"]
