--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "jest": "^28.1.2",
     "jest-less-loader": "^0.1.2",
     "jest-transform-stub": "^2.0.0",
-    "jsdom": "^20.0.0",
+    "jsdom": "19.0.0",
     "jsdom-global": "^3.0.2",
     "less": "^4.1.3",
     "less-loader": "5.0.0",
